исправить первые замечания ревьюера