@@ -10,15 +10,12 @@ import ru.practicum.shareit.item.model.Item;
 import ru.practicum.shareit.user.UserMapper;
 import ru.practicum.shareit.user.dto.UserDto;
 
-import java.util.ArrayList;
 import java.util.Collection;
-import java.util.stream.Collectors;
+import java.util.Collections;
 
 @Service
 @RequiredArgsConstructor
 public class ItemServiceImpl implements ItemService {
-    private final ItemMapper itemMapper;
-    private final UserMapper userMapper;
     private final ItemStorage itemStorage;
 
     private static final String ITEM_NOT_FOUND_ERR = "Вещь с id %d не найдена";
@@ -26,16 +23,16 @@ public class ItemServiceImpl implements ItemService {
 
     @Override
     public ItemDto createItem(ItemDto itemDto, UserDto userDto) {
-        Item item = itemMapper.toItem(itemDto);
-        item.setOwner(userMapper.toUser(userDto));
+        Item item = ItemMapper.toItem(itemDto);
+        item.setOwner(UserMapper.toUser(userDto));
 
-        return itemMapper.toItemDto(itemStorage.createItem(item));
+        return ItemMapper.toItemDto(itemStorage.createItem(item));
     }
 
     @Override
     public ItemDto updateItemById(ItemDto itemDto, Long userId, Long itemId) {
-        if (isUserOwnerOfItem(itemId, userId)) {
-            return itemMapper.toItemDto(itemStorage.updateItemById(itemMapper.toItem(itemDto), itemId));
+        if (Boolean.TRUE.equals(isUserOwnerOfItem(itemId, userId))) {
+            return ItemMapper.toItemDto(itemStorage.updateItemById(ItemMapper.toItem(itemDto), itemId));
         } else {
             throw new ValidationException(String.format("Вещь с id %d не принадлежит пользователю с id %d",
                     itemId, userId));
@@ -46,7 +43,7 @@ public class ItemServiceImpl implements ItemService {
     public ItemDto findItemById(Long itemId) {
         Item item = itemStorage.findItemById(itemId);
         if (item != null) {
-            return itemMapper.toItemDto(itemStorage.findItemById(itemId));
+            return ItemMapper.toItemDto(itemStorage.findItemById(itemId));
         } else {
             throw new ValidationException(String.format(ITEM_NOT_FOUND_ERR, itemId));
         }
@@ -55,18 +52,18 @@ public class ItemServiceImpl implements ItemService {
     @Override
     public Collection<ItemDto> findAllByUserId(Long userId) {
         return itemStorage.findAllByUserId(userId).stream()
-                .map(itemMapper::toItemDto)
-                .collect(Collectors.toList());
+                .map(ItemMapper::toItemDto)
+                .toList();
     }
 
     @Override
     public Collection<ItemDto> searchItemsByText(String text) {
         if (text == null || text.isEmpty()) {
-            return new ArrayList<>();
+            return Collections.emptyList();
         }
         return itemStorage.searchItemsByText(text).stream()
-                .map(itemMapper::toItemDto)
-                .collect(Collectors.toList());
+                .map(ItemMapper::toItemDto)
+                .toList();
     }
 
     private Boolean isUserOwnerOfItem(Long itemId, Long userId) {
